@@ -17,6 +17,7 @@ This release includes the following changes:
  o Added --remote-name-all
  o Now builds for the INTEGRITY operating system
  o Added CURLINFO_APPCONNECT_TIME
+ o Added test selection by key word in runtests.pl
 
 This release includes the following bugfixes:
 
